# Golf-game

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  icon.svg.import  imgui.ini  project.godot
assets/: level0.txt  test-level.kra  tiles.kra
assets/player/: golf-guy.kra  sprite_sheet.json  textures.json
include/: animator.hpp  core.hpp  editor.hpp  game.hpp  math.hpp  molson.h  objects.hpp  physics.hpp  player.hpp
scenes/tests/: test_scene.tscn
scripts/: player.gd  player.gd.uid
shaders/: object.frag  object.vert
sprites/player/: golf-guy.kra  golf-guy.kra~  sprite_sheet.png.import
sprites/player/frames/: frame0000.png.import  frame0001.png.import  frame0002.png.import  frame0003.png.import  frame0004.png.import  frame0005.png.import  frame0006.png.import  frame0007.png.import  frame0008.png.import  frame0009.png.import  frame0010.png.import  frame0011.png.import  frame0012.png.import  frame0013.png.import  frame0014.png.import  frame0015.png.import  frame0016.png.import  frame0017.png.import  frame0018.png.import  frame0019.png.import  frame0020.png.import  frame0021.png.import  frame0022.png.import  frame0023.png.import  frame0024.png.import  frame0025.png.import  frame0026.png.import  frame0027.png.import  frame0028.png.import  frame0029.png.import  frame0030.png.import  frame0031.png.import  frame0032.png.import  frame0033.png.import  frame0034.png.import
src/: core.cpp  game.cpp  main.cpp  objects.cpp
